<resources>
    <string name="app_name">Desafio_4</string>
    <string name="string_email">E-mail</string>
    <string name="string_password">Senha</string>
    <string name="string_remember">Lembrar</string>
    <string name="string_login">Log In</string>
    <string name="string_create_account">Criar conta</string>
    <string name="string_name">Nome</string>
    <string name="string_confirm_password">Confirmar senha</string>
    <string name="string_game_name_placeholder">Game Name</string>
    <string name="string_game_description_placeholder">Descrição do Game</string>
    <string name="string_game_release_placeholder">Lançamento xxxx</string>
    <string name="string_name_game">Nome do Jogo</string>
    <string name="string_game_release">Lançamento do Jogo</string>
    <string name="string_description">Descrição</string>
    <string name="string_save_game">Salvar Jogo</string>
    <string name="string_search_game">Pesquise um Jogo</string>
    <string name="validationEmail">O e-mail deve ser válido</string>
    <string name="validationConfirmPassword">Senha Inválida</string>
    <string name="validationPassword">A senha deve ter mais de 6 caracteres</string>
    <string name="string_error_message">O campo %1$s é obrigatório</string>
    <string name="string_log_out">Log Out</string>
    <string name="string_take_photo">Tirar Foto</string>
    <string name="string_galery">Galeria</string>
</resources>